--- a/bower.json
+++ b/bower.json
@@ -39,7 +39,9 @@
 		"images"
 	],
 	"dependencies": {
-		"angular": "^1.3.20"
+		"angular": "^1.5.0",
+		"angular-material": "^1.0.6",
+		"css-helpers-lib": "*"
 	},
 	"devDependencies": {
 	}
